--- a/src/resources/css/themes/Black/BaseTrack.css
+++ b/src/resources/css/themes/Black/BaseTrack.css
@@ -152,8 +152,8 @@ PeakMeter
 TrackGroupView #topPanel                                /* topPanel is used to show channel name */
 {
     background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-    stop:0 black,
-    stop:1 rgb(35, 35, 35));
+    stop:0 rgb(10, 10, 10),
+    stop:1 rgb(80, 80, 80));
 
     border-top-left-radius: 1px;
     border-top-right-radius: 1px;
@@ -165,7 +165,7 @@ TrackGroupView #groupNameField                          /* the text field used t
     margin-top: 0px;
     font-size: 11px;
     font-weight: normal;
-    border: white;
+    border: rgb(80, 80, 80);
     background-color: rgb(20, 20, 20);
 }
 
