--- a/src/resources/css/themes/Black/MainWindow.css
+++ b/src/resources/css/themes/Black/MainWindow.css
@@ -48,7 +48,9 @@ QMainWindow
 
 #bottomPanel
 {
-    background: rgb(20, 20, 20);
+    background: qlineargradient(x1:1, y1:0, x2:0, y2:0,
+    stop:0 rgb(50, 50, 50),
+    stop:1 rgb(20, 20, 20));
     border-top: 1px solid Black;
     border-left: 1px solid Black;
     border-right: 1px solid Black;
