--- a/src/resources/css/themes/Black/PublicRooms.css
+++ b/src/resources/css/themes/Black/PublicRooms.css
@@ -2,7 +2,7 @@
 
 JamRoomViewPanel
 {
-    background-color: rgb(22, 22, 22);
+    background-color: rgb(30, 30, 30);
     border: 1px solid black;
     border-top: 1px solid black;
     border-left: 1px solid black;
@@ -11,7 +11,9 @@ JamRoomViewPanel
 
 JamRoomViewPanel #content                   /* where the user names and wave form are showed */
 {
-    background: rgb(20, 20, 20);
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+    stop:0 rgb(20, 20, 20),
+    stop:1 rgb(30, 30, 30));
 }
 
 JamRoomViewPanel #labelName             /* the server name (ninbot.com, ninjamer.com, etc) */
