--- a/src/resources/css/themes/Black/Dialogs.css
+++ b/src/resources/css/themes/Black/Dialogs.css
@@ -19,10 +19,20 @@ PluginScanDialog #labelPluginText
 
 BusyDialog
 {
-    border: 1px solid black;
+    border: 1px solid rgb(140, 140, 140);
     padding: 0px;
     margin: 0px;
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
     stop:0 rgb(20, 20, 20),
     stop:1 rgb(80, 80, 80));
+}
+
+QMessageBox,
+QInputDialog,
+PluginScanDialog,
+MidiToolsDialog
+{
+    background-color: rgb(140, 140, 140);
+    border: 1px outset gray;
+    padding: 32px;
 }
