--- a/src/resources/css/themes/Black/NinjamWindow.css
+++ b/src/resources/css/themes/Black/NinjamWindow.css
@@ -85,6 +85,10 @@ NinjamRoomWindow QToolButton#buttonHorizontalLayout:!checked{
     border-left-color: none;
 }
 
+NinjamRoomWindow #labelUserName
+{
+    color: rgb(80, 80, 80);
+}
 
 /* Ninjam tracks
 -----------------------------------------*/
