--- a/src/resources/css/themes/Black/LocalTrack.css
+++ b/src/resources/css/themes/Black/LocalTrack.css
@@ -12,9 +12,9 @@ FxPanelItem
     border: none;
 }
 
-BaseTrackView[unlighted="false"] FxPanelItem            /* slot border when the track is not xmiting */
+BaseTrackView[unlighted="false"] FxPanelItem            /* slot border when the track is xmiting */
 {
-    border: 1px outset rgb(100, 100, 100);
+    border: 1px outset rgb(20, 20, 20);
 }
 
 FxPanelItem[containPlugin="false"]                      /* empty slot */
@@ -112,17 +112,17 @@ LocalTrackView #inputPanel:hover
 #xmitButton:!checked
 {
     background-color: rgb(80, 80, 80);
-    border-color: rgb(140, 140, 140);
+    border-color: rgb(20, 20, 20);
     color: black;
 }
 
 #xmitButton:hover
 {
-    background-color: rgb(0, 215, 0);
+    background-color: rgb(0, 80, 0);
 }
 
 #xmitButton:hover:!checked
 {
-    background-color: rgb(255, 40, 40);
+    background-color: rgb(80, 0, 0);
     border-color: rgba(0, 0, 0, 90);
 }
