--- a/src/resources/css/themes/Rounded/Chat.css
+++ b/src/resources/css/themes/Rounded/Chat.css
@@ -39,7 +39,8 @@ ChatMessagePanel #labelTimeStamp
     margin: 2px;
 }
 
-ChatMessagePanel #translateButton
+ChatMessagePanel #translateButton,
+ChatMessagePanel #blockButton
 {
     border: 1px solid rgb(0, 0, 0, 80);
     border-radius: 2px;
@@ -49,7 +50,8 @@ ChatMessagePanel #translateButton
     max-height: 6px;
 }
 
-ChatMessagePanel #translateButton:hover
+ChatMessagePanel #translateButton:hover,
+ChatMessagePanel #blockButton:hover
 {
     border-color: rgb(200, 200, 200);
     border-style: outset;
