--- a/src/resources/css/themes/Black/BaseTrack.css
+++ b/src/resources/css/themes/Black/BaseTrack.css
@@ -142,8 +142,17 @@ TrackGroupView[unlighted="true"] > #topPanel                /* the track group t
 /* -----------------------------------------*/
 
 
-#panSlider::handle
+BaseTrackView #panSlider::handle
 {
+    background-color: rgb(150, 150, 150);
+    border: rgb(150, 150, 150);
+    width: 7px;
+}
+
+BaseTrackView #panSlider::handle:hover
+{
+    background-color: rgb(200, 200, 200);
+    border: rgb(200, 200, 200);
     width: 7px;
 }
 
