--- a/src/resources/css/themes/Black/BaseTrack.css
+++ b/src/resources/css/themes/Black/BaseTrack.css
@@ -8,7 +8,7 @@
 #muteButton
 {
     font-size: 9px;
-    border-color: rgb(110,110,110);
+    border-color: rgb(20,20,20);
     padding: 2px;
     color: rgb(50,50,50);
 }
@@ -72,32 +72,39 @@ BaseTrackView[unlighted="true"] #muteButton
 
 #soloButton:checked
 {
-    background-color: rgb(80, 80, 80);
+    background-color: rgb(0, 128, 0);
     color: rgb(140, 140, 140);
-    border-color: rgb(40, 80, 40);
 }
 
 #soloButton:hover:checked
 {
-    background-color: rgb(40, 40, 40);
-    border-color: rgb(40, 80, 40);
+    background-color: rgb(0, 128, 0);
+    color: rgb(250, 250, 250);
+}
+
+#soloButton:hover
+{
+    background-color: rgb(140, 140, 140);
+    color: rgb(200, 200, 200);
 }
 
 #muteButton:checked
 {
-    background-color: rgb(40, 40, 40);
+    background-color: rgb(128, 0, 0);
     color: rgb(140, 140, 140);
-    border-color: rgb(80, 40, 40);
 }
 
 #muteButton:hover:checked
 {
-    background-color: rgb(20, 20, 20);
-    color: rgb(140, 140, 140);
-    border-color: rgb(80, 40, 40);
+    background-color: rgb(128, 0, 0);
+    color: rgb(250, 250, 250);
 }
 
-
+#muteButton:hover
+{
+    background-color: rgb(140, 140, 140);
+    color: rgb(200, 200, 200);
+}
 /* Small Label used to show max peak below peak meters
 -------------------------------------------------------*/
 BaseTrackView #peaksDbLabel
