Showing an icon when user is blocked in chat

--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -83,6 +83,7 @@
         <file>windows.png</file>
         <file>pencil.png</file>
         <file>pencil-read-only.png</file>
+        <file>chat_blocked.png</file>
     </qresource>
     <qresource prefix="/flags">
         <file>flags/ad.png</file>
