Small GUI improvements
- Matching peak meter size in vertical and horizontal tracks
- Using more space between ninjam tracks
- Adding margin between ninjam user name and country flag

--- a/src/resources/css/common/BaseTrack.css
+++ b/src/resources/css/common/BaseTrack.css
@@ -80,6 +80,11 @@ BaseTrackView #peaksDbLabel:hover{
     font-size: 9px;
 }
 
+PeakMeter
+{
+    min-width: 4px;
+    min-height: 4px;
+}
 
 /*
 Peak meter color when the tracks are "disabled". For local tracks this color is
