--- a/src/resources/css/themes/Black/LocalTrack.css
+++ b/src/resources/css/themes/Black/LocalTrack.css
@@ -5,6 +5,7 @@
 --------------------------------------------------*/
 FxPanelItem
 {
+    color: rgb(140, 140, 140);
     background-color: rgba(0, 0, 0, 55);
     background-position: center right;
     background-repeat: none;
@@ -58,13 +59,13 @@ FxPanelItem QPushButton:hover                           /* hover effect for the 
 
 FxPanelItem QPushButton:checked                         /* 'plugin bypass' button is checked */
 {
-    background-color: rgb(210, 210, 210);
+    background-color: rgb(0, 128, 0);
     border-color: rgb(0, 100, 0);
 }
 
 FxPanelItem QPushButton:checked:hover                   /* hover effect for 'plugin bypass' button when checked */
 {
-    background-color: rgb(0, 225, 0);
+    background-color: rgb(0, 180, 0);
 }
 
 
@@ -78,6 +79,21 @@ LocalTrackView[highlighted="true"]
     stop:1 rgb(170, 170, 170));
 }
 
+LocalTrackView #inputSelectionButton            /* Button used to open the input selection menu */
+{
+    background-color: none;
+    background-image: url(':/images/arrow-down.png');
+    background-repeat: none;
+    background-position: center right;
+    border: none;
+    color: rgb(140, 140, 140);
+    font-size: 9px;
+    text-align: left;
+    margin: 0px;
+    padding-left: 2px;
+    padding-right: 2px;
+}
+
 LocalTrackView #inputPanel
 {
     background-color: rgba(0, 0, 0, 60);
@@ -88,8 +104,31 @@ LocalTrackView #inputPanel:hover
     background-color: rgba(0, 0, 0, 30);
 }
 
+LocalTrackView[unlighted="false"] #inputPanel    /* input panel color when user is transmiting */
+{
+    border: 1px outset rgb(20, 20, 20);
+}
 
+LocalTrackView[unlighted="false"] #inputPanel:hover    /* input panel color when user is transmiting */
+{
+    border: 1px outset rgb(80, 80, 80);
+}
 
+LocalTrackView #midiToolsButton                 /* The button used to open MidiToolsDialog */
+{
+    color: rgb(20, 20, 20);
+    border: 1px outset rgb(40, 40, 40);
+    background-color: rgb(140, 140, 140);
+    font-size: 10px;
+    background-repeat: none;
+    background-position: center left;
+    padding: 0px;
+}
+
+LocalTrackView #midiToolsButton:hover                 /* The button used to open MidiToolsDialog */
+{
+   background-color: rgb(180, 180, 180);
+}
 
 
 #xmitButton
