more light to jam rooms and matched username panel color

--- a/src/resources/css/themes/Black/MainWindow.css
+++ b/src/resources/css/themes/Black/MainWindow.css
@@ -1,7 +1,7 @@
 #userNamePanel
 {
-    background-color: rgb(20, 20, 20);
-    border-color: black;
+    background-color: rgb(35, 35, 35);
+    border-color: rgba(0, 0, 0, 90);;
     padding: 1px;
 }
 
