--- a/src/resources/css/themes/Black/BaseTrack.css
+++ b/src/resources/css/themes/Black/BaseTrack.css
@@ -19,7 +19,7 @@
 #soloButton,
 #muteButton
 {
-    background: rgb(140, 140, 140);
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(140, 140, 140), stop:1 rgb(120, 120, 120));
 }
 
 
@@ -49,7 +49,12 @@ QPushButton#buttonStereoInversion
     background-position: center center;
     max-width: 8px;
     max-height: 12px;
-    background-color: rgb(140, 140, 140);
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(140, 140, 140), stop:1 rgb(120, 120, 120));
+}
+
+QPushButton#buttonStereoInversion:hover
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(180, 180, 180), stop:1 rgb(120, 120, 120));
 }
 
 /* button colors when the track is NOT xmiting */
@@ -86,8 +91,8 @@ BaseTrackView[unlighted="true"] #buttonStereoInversion
 
 #soloButton:hover
 {
-    background-color: rgb(140, 140, 140);
-    color: rgb(200, 200, 200);
+        background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(180, 180, 180), stop:1 rgb(120, 120, 120));
+    color: rgb(140, 140, 140);
 }
 
 #muteButton:checked
@@ -104,8 +109,8 @@ BaseTrackView[unlighted="true"] #buttonStereoInversion
 
 #muteButton:hover
 {
-    background-color: rgb(140, 140, 140);
-    color: rgb(200, 200, 200);
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(180, 180, 180), stop:1 rgb(120, 120, 120));
+    color: rgb(140, 140, 140);
 }
 /* Small Label used to show max peak below peak meters
 -------------------------------------------------------*/
