--- a/src/resources/css/themes/Black/LocalTrack.css
+++ b/src/resources/css/themes/Black/LocalTrack.css
@@ -170,3 +170,17 @@ background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(20, 180,
 background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(180, 20, 20), stop:1 rgb(80, 0, 0));
     border-color: rgba(0, 0, 0, 90);
 }
+
+LocalTrackGroupView #groupNameField
+{
+    color: rgb(140, 140, 140);
+    background-color: rgb(50, 50, 50);
+    border-color: rgb(20, 20, 20);
+}
+
+LocalTrackGroupView #groupNameField:focus
+{
+    color: rgb(140, 140, 140);
+    background-color: rgb(50, 50, 50);
+    border-color: rgb(20, 20, 20);
+}
