--- a/src/resources/css/themes/Black/BaseTrack.css
+++ b/src/resources/css/themes/Black/BaseTrack.css
@@ -189,7 +189,7 @@ TrackGroupView[unlighted="true"] > #topPanel                /* the track group t
 
 BaseTrackView #panSlider::handle
 {
-    background-color: rgb(140, 140, 140);
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(180, 180, 180), stop:1 rgb(120, 120, 120));
     border: 1px outset rgb(30, 30, 30);
 
 }
@@ -197,13 +197,11 @@ BaseTrackView #panSlider::handle
 BaseTrackView #panSlider::handle:hover
 {
     background-color: rgb(180, 180, 180);
-    border: rgb(40, 40, 40);
 }
 
 BaseTrackView #levelSlider::handle:hover
 {
     background-color: rgb(180, 180, 180);
-    border: rgb(40, 40, 40);
 }
 
 PeakMeter
