--- a/src/resources/css/themes/Black/General.css
+++ b/src/resources/css/themes/Black/General.css
@@ -157,7 +157,7 @@ QSlider::groove:vertical
 
 QSlider::handle:horizontal
 {
-    background: rgb(80, 80, 80);
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(120, 120, 120), stop:1 rgb(60, 60, 60));
     border: 1px outset rgb(10, 10, 10);
     border-radius: 2px;
     margin-top: -8px;
@@ -169,7 +169,7 @@ QSlider::handle:horizontal
 
 QSlider::handle:vertical
 {
-    background: rgb(140, 140, 140);
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(180, 180, 180), stop:1 rgb(120, 120, 120));
     border: 1px outset rgb(30, 30, 30);
     border-radius: 2px;
     margin-left: -9px;
@@ -181,14 +181,12 @@ QSlider::handle:vertical
 
 QSlider::handle:horizontal:hover
 {
-    background: rgb(150, 150, 150);
-    border: 1px outset rgb(80, 80, 80);
+    background-color: rgb(140, 140, 140);
 }
 
 QSlider::handle:vertical:hover
 {
-    background: rgb(180, 180, 180);
-    border: 1px outset rgb(80, 80, 80);
+    background-color: rgb(140, 140, 140);
 }
 
 
