--- a/src/resources/css/themes/Black/NinjamWindow.css
+++ b/src/resources/css/themes/Black/NinjamWindow.css
@@ -46,6 +46,7 @@ NinjamTrackView[horizontal="true"]
 ------------------------------------------------------------------------------------*/
 #licenceButton
 {
+    border: 1px solid black;
     max-height: 20px;
     width: 28px;
 }
@@ -53,19 +54,27 @@ NinjamTrackView[horizontal="true"]
 NinjamRoomWindow QToolButton:hover,
 #licenceButton:hover
 {
-    border: 1px solid rgba(0, 0, 0, 50);
-    background-color: rgba(255, 255, 255, 80);
+    border: 1px solid black;
+    background-color: rgb(120, 120, 120);
+}
+
+NinjamRoomWindow QToolButton:hover:checked,
+#licenceButton:hover:checked
+{
+    border: 1px solid black;
+    background-color: rgb(140, 140, 140);
 }
 
 NinjamRoomWindow QToolButton,
 #licenceButton
 {
-    border: 1px solid rgb(150, 150, 150);
+    border: 1px solid black;
     background-color: rgba(255, 255, 255, 10);
 }
 
 NinjamRoomWindow QToolButton
 {
+    border: 1px solid black;
     height: 20px;
     min-width: 28px;
     padding: 0px;
@@ -73,15 +82,19 @@ NinjamRoomWindow QToolButton
 
 NinjamRoomWindow QToolButton:checked
 {
-    background-color: rgba(255, 255, 255, 60);
-    border: 1px solid rgb(130, 130, 130);
+    border: 1px solid black;
+    background-color: rgb(60, 60, 60);
 }
 
 
-NinjamRoomWindow QToolButton#buttonVerticalLayout:!checked{
+NinjamRoomWindow QToolButton#buttonVerticalLayout:!checked
+{
+    border: 1px solid black;
     border-right-color: none;
 }
-NinjamRoomWindow QToolButton#buttonHorizontalLayout:!checked{
+NinjamRoomWindow QToolButton#buttonHorizontalLayout:!checked
+{
+    border: 1px solid black;
     border-left-color: none;
 }
 
