--- a/src/resources/css/themes/Black/BaseTrack.css
+++ b/src/resources/css/themes/Black/BaseTrack.css
@@ -10,7 +10,7 @@
     font-size: 9px;
     border-color: rgb(20 ,20 ,20);
     padding: 2px;
-    color: rgb(50,50,50);
+
 }
 
 #buttonBoostMinus12,
@@ -19,6 +19,7 @@
 #soloButton,
 #muteButton
 {
+    color: rgb(20, 20, 20);
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(140, 140, 140), stop:1 rgb(120, 120, 120));
 }
 
@@ -37,7 +38,7 @@
 #buttonBoostPlus12:checked,
 #buttonBoostZero:checked
 {
-    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(100, 100, 100), stop:1 rgb(60, 60, 60));
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(100, 100, 100), stop:1 rgb(80, 80, 80));
     color: rgba(0, 0, 0, 160);
     border-radius: 0px;
     border-color: rgb(20, 20, 20);
@@ -57,7 +58,7 @@
 #buttonBoostPlus12:hover:checked,
 #buttonBoostZero:hover:checked
 {
-    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(80, 80, 80), stop:1 rgb(60, 60, 60));
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(120, 120, 120), stop:1 rgb(80, 80, 80));
     color: rgb(40, 40, 40);
     border-radius: 0px;
     border-color: rgb(20, 20, 20)
@@ -84,7 +85,7 @@ QPushButton#buttonStereoInversion:hover
 
  QPushButton#buttonStereoInversion:hover:checked
 {
-    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(140, 140, 140), stop:1 rgb(120, 120, 120));
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(140, 140, 140), stop:1 rgb(80, 80, 80));
 }
 
 /* button colors when the track is NOT xmiting */
