--- a/src/resources/css/themes/Black/LocalTrack.css
+++ b/src/resources/css/themes/Black/LocalTrack.css
@@ -123,7 +123,7 @@ LocalTrackView #midiToolsButton                 /* The button used to open MidiT
 {
     color: rgb(20, 20, 20);
     border: 1px outset rgb(40, 40, 40);
-    background-color: rgb(140, 140, 140);
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(140, 140, 140), stop:1 rgb(120, 120, 120));
     font-size: 10px;
     background-repeat: none;
     background-position: center left;
@@ -132,7 +132,7 @@ LocalTrackView #midiToolsButton                 /* The button used to open MidiT
 
 LocalTrackView #midiToolsButton:hover                 /* The button used to open MidiToolsDialog */
 {
-   background-color: rgb(180, 180, 180);
+       background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(180, 180, 180), stop:1 rgb(120, 120, 120));
 }
 
 
