--- a/src/resources/css/themes/Black/NinjamWindow.css
+++ b/src/resources/css/themes/Black/NinjamWindow.css
@@ -106,33 +106,21 @@ NinjamRoomWindow #labelUserName
 /* Ninjam tracks
 -----------------------------------------*/
 
-NinjamTrackView[unlighted="true"]           /* user is not xmiting */
+NinjamTrackView[unlighted="true"] #channelName              /* user is not xmiting */
 {
-    background: rgba(0, 0, 0, 20);
-}
-
-NinjamTrackGroupView #groupNameField                          /* the text field used to input channel name */
-{
-    color: black;
-    margin-bottom: 0px;
-    margin-top: 0px;
-    font-size: 11px;
-    font-weight: normal;
-    border: rgb(80, 80, 80);
-    background-color: rgb(35, 35, 35);
-}
-
-NinjamTrackGroupView[unlighted="true"] #groupNameField        /* channel name text field when not xmiting */
-{
-    color: black;
-    background: rgba(255, 255, 255, 20);
-    border: none;
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+    stop:0 rgb(70, 70, 70),
+    stop:1 rgb(50, 50, 50));
+    border: 1px solid rgb(60, 60, 60);
 }
 
 
 NinjamTrackView  #channelName               /* channel name for ninjamers */
 {
-    border-color: rgb(20, 20, 20);
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+    stop:0 rgb(60, 60, 60),
+    stop:1 rgb(80, 80, 80));
+    border: 1px solid rgb(70, 70, 70);
     padding-top: 3px;
     padding-bottom: 3px;
     font-size: 10px;
