--- a/src/resources/css/themes/Black/NinjamWindow.css
+++ b/src/resources/css/themes/Black/NinjamWindow.css
@@ -108,14 +108,15 @@ NinjamRoomWindow #labelUserName
 
 NinjamTrackView[unlighted="true"] #channelName              /* user is not xmiting */
 {
+    color: rgb(80, 80, 80);
     background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-    stop:0 rgb(70, 70, 70),
-    stop:1 rgb(50, 50, 50));
-    border: 1px solid rgb(60, 60, 60);
+    stop:0 rgb(50, 50, 50),
+    stop:1 rgb(60, 60, 60));
+    border: 1px solid rgb(55, 55, 55);
 }
 
 
-NinjamTrackView  #channelName               /* channel name for ninjamers */
+NinjamTrackView  #channelName               /* channel name for ninjamers XMIT ON */
 {
     background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
     stop:0 rgb(60, 60, 60),
@@ -124,7 +125,7 @@ NinjamTrackView  #channelName               /* channel name for ninjamers */
     padding-top: 3px;
     padding-bottom: 3px;
     font-size: 10px;
-    color: rgb(140, 140, 140);;
+    color: rgb(140, 140, 140);
     max-width: 130px;
 }
 
