--- a/src/resources/css/themes/Flat/General.css
+++ b/src/resources/css/themes/Flat/General.css
@@ -199,3 +199,23 @@ QTabBar::tab:!selected
     margin-top: 3px; /* make non-selected tabs look smaller */
     color: rgb(90, 90, 90);
 }
+
+QMenuBar::item
+{
+    color: black;
+    background:rgb(225, 225, 225);
+}
+
+QMenuBar
+{
+    background:rgb(225, 225, 225);
+}
+
+QMenu
+{
+    border: 1px outset rgb(80, 80, 80);
+    color: black;
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+    stop:0 rgb(250, 250, 250),
+    stop:1 rgb(230, 230, 230));
+}
