--- a/src/resources/css/themes/Flat/General.css
+++ b/src/resources/css/themes/Flat/General.css
@@ -209,6 +209,10 @@ QMenuBar::item
 QMenuBar
 {
     background:rgb(225, 225, 225);
+    border-bottom: none;
+    border-top: 1px solid rgb(90, 90, 90);
+    border-left: 1px solid rgb(90, 90, 90);
+    border-right: 1px solid rgbrgb(90, 90, 90);
 }
 
 QMenu
