--- a/src/resources/css/themes/Rounded/General.css
+++ b/src/resources/css/themes/Rounded/General.css
@@ -290,6 +290,10 @@ QMenuBar
     background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
     stop:0 #EAEAEA,
     stop:1 #CACACA);
+    border-bottom: none;
+    border-top: 1px solid rgb(70, 70, 70);
+    border-left: 1px solid rgb(70, 70, 70);
+    border-right: 1px solid rgb(70, 70, 70);
 }
 
 QMenu
