Round theme ninjamer disabled track color fix
I found that the comment in this line is blocking the code, so this PR removes the comment.

--- a/src/resources/css/themes/Rounded/BaseTrack.css
+++ b/src/resources/css/themes/Rounded/BaseTrack.css
@@ -96,7 +96,7 @@ BaseTrackView
    font-size: 8px; /*db value */
 }
 
-BaseTrackView[unlighted="true"]             /* track when is not xmiting */
+BaseTrackView[unlighted="true"]
 {
     background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
         stop:0 rgb(150, 150, 150),
