Dropping 'Connected as' in mini mode

--- a/src/resources/css/common/NinjamWindow.css
+++ b/src/resources/css/common/NinjamWindow.css
@@ -8,6 +8,7 @@
 NinjamRoomWindow #labelBpmBpi                                /* label used to show current bpi and bpm values inside ninjam room window */
 {
     color: rgba(0, 0, 0, 120);
+    font-size: 9px;
 }
 
 /* Tool buttons in ninjam window
