Using 'double line' layout to show user name and bpi/bpm values

--- a/src/Common/gui/NinjamRoomWindow.ui
+++ b/src/Common/gui/NinjamRoomWindow.ui
@@ -56,38 +56,30 @@
       <number>6</number>
      </property>
      <item>
-      <widget class="QLabel" name="labelUserName">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
+      <layout class="QVBoxLayout" name="labelsLayout">
+       <property name="spacing">
+        <number>3</number>
        </property>
-       <property name="text">
-        <string>Connected as &lt;user_name&gt;</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="labelBpmBpi">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-         <horstretch>1</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="text">
-        <string notr="true">BPM 120  BPI 32</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-      </widget>
+       <item>
+        <widget class="QLabel" name="labelUserName">
+         <property name="text">
+          <string>Connected as &lt;user_name&gt;</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="labelBpmBpi">
+         <property name="text">
+          <string notr="true">BPM 120  BPI 32</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
      <item>
       <widget class="QPushButton" name="licenceButton">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+        <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
@@ -128,7 +120,7 @@
         <x>0</x>
         <y>0</y>
         <width>495</width>
-        <height>313</height>
+        <height>305</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout">
