Fixing beat indicator color in floating metronome window fix #425

--- a/src/resources/css/themes/Black/NinjamWindow.css
+++ b/src/resources/css/themes/Black/NinjamWindow.css
@@ -219,7 +219,8 @@ IntervalProgressWindow
     selection-background-color: rgb(80, 80, 80);
 }
 
-NinjamPanel #intervalPanel
+NinjamPanel #intervalPanel,
+IntervalProgressWindow #intervalPanel
 {
     color: rgb(180, 180, 180);
 }
