Adding GUI to choose encoder quality

--- a/src/resources/css/common/Dialogs.css
+++ b/src/resources/css/common/Dialogs.css
@@ -24,7 +24,8 @@ PreferencesDialog #plainTextEdit
 PreferencesDialog QGroupBox,
 MidiToolsDialog QGroupBox,
 PreferencesDialog #sampleRateLabel,
-PreferencesDialog #bufferSizeLabel
+PreferencesDialog #bufferSizeLabel,
+PreferencesDialog #labelEncoderQuality
 {
     font-weight: bold;
 }
