Adding a button to turn on/off the low cut

--- a/src/resources/css/themes/Black/NinjamWindow.css
+++ b/src/resources/css/themes/Black/NinjamWindow.css
@@ -1,3 +1,8 @@
+NinjamTrackView #lowCutButton:checked
+{
+    background-color: rgb(160, 160, 160);
+}
+
 NinjamTrackView[horizontal="true"] #panSlider
 {
     max-width: 50px;
