Adding Low cut button in ninjam tracks (#478) close#477
* Adding low cut in ninjam track nodes

 - The low cut code is adapted from Ardour using a Biquad filter.

* Adding a button to turn on/off the low cut

* Remembering low cut status for ninjam users

* Fixing low cut button height in horizontal tracks

--- a/src/resources/css/common/NinjamWindow.css
+++ b/src/resources/css/common/NinjamWindow.css
@@ -176,10 +176,37 @@ NinjamTrackView
 }
 
 NinjamTrackView #soloButton,
-NinjamTrackView #muteButton
+NinjamTrackView #muteButton,
+NinjamTrackView #lowCutButton
 {
    border-color: rgb(95,95,95);
    color: rgb(40,40,40);
+}
+
+NinjamTrackView #lowCutButton
+{
+    max-width: 8px;
+    max-height: 8px;
+    background-image: url(':/images/low_cut.png');
+    background-position: center center;
+    background-repeat: none;
+    border-style: inset;
+}
+
+NinjamTrackView #lowCutButton::hover
+{
+    border-style: solid;
+    border-color: rgb(80, 80, 80);
+}
+
+NinjamTrackView[horizontal="true"] #lowCutButton
+{
+    max-height: 6px;
+}
+
+NinjamTrackView QPushButton#lowCutButton:!checked
+{
+    border-style: outset;
 }
 
 NinjamTrackView #peaksDbLabel               /* the label used to show max peak (in bottom of peak meters) */
