Using a editable widget for chords

--- a/src/resources/css/themes/Black/Chords.css
+++ b/src/resources/css/themes/Black/Chords.css
@@ -10,4 +10,6 @@ ChordLabel
 ChordLabel[current="true"]
 {
     background-color: rgb(140, 140, 140);
+    border-color: gray;
+    color: black;
 }
