--- a/src/resources/css/themes/Flat/Chords.css
+++ b/src/resources/css/themes/Flat/Chords.css
@@ -9,5 +9,5 @@ ChordLabel
 
 ChordLabel[current="true"]
 {
-    background-color: rgba(255,255,255, 220);
+    /*(background-color: rgba(255,255,255, 220);*/
 }
